# media_splitter_by_size

./: .gitignore  LICENSE  README.md  _kf_test.py  get_kfs.py  main.py  pyproject.toml
docs/: TECHNICAL.md
media_splitter_by_size/: __init__.py  cli.py  console.py  probe.py  splitter.py
